# sldrtools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: LDML_entry.ods  Script2Font.csv
docs/: LDML_entry.md  Script2Font.md
lib/sldr/: UnicodeSets.py  collation.py  ducet.py  hunspell.py  iana.py  langtags_full.py  language-subtag-registry.txt  ldml.py  ldml_exemplars.py  ldml_keyboard.py  ldml_merge.py  py3xmlparser.py  sheet.py  sil.dtd  supplementalMetadata.xml  tzones.csv  utils.py  xmltemplate.py
lib/sldr/tools/: cldrimport.py  fixsldr.py  fontmatch.py  hackldmlattribs.py  icubreaktext.py  kbdtest.py  ldmlflatten.py  proccldrcomments.py  sldrautonames.py  sldrcoverage.py  zonetab.py
scripts/: cldrexemplarsexport  cldrimport  fixsldr  fontmatch  fontrules  hackldmlattribs  icubreaktext  icupretty  kbdtest  ldmlflatten  ldmlmerge  ldmlnormalize  proccldrcomments  sheetldml  sldraddfonts  sldraddkeymans  sldrautonames  sldrcoverage  sldrsupplementfonts.py  utils  zonetab
tests/sldr/: UnicodeSets_test.py  collation_test.py  collation_tests.py  ldml_exemplars_test.py  ldml_test.py  makeuid
