[build-system]
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sldr"
version = "0.7.5"
description = "python package and scripts for working with SLDR"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Martin Hosken", email = "martin_hosken@sil.org"},
    {name = "David Rowe", email = "david_rowe@sil.org"}
]
maintainers = [
    {name = "David Rowe"},
    {name = "Martin Hosken"}
]
requires-python = ">= 3.7"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "langtag @ git+https://github.com/silnrsi/langtags@master",
    "lxml",
    "pyicu",
]

[project.optional-dependencies]
css = ["cssutils"]
odf = ["odfpy"]
sklearn = ["scikit_learn"]
xml = ["lxml"]

[project.urls]
"Homepage" = "http://github.com/silnrsi/sldrtools/README.md"
"Repository" = "http://github.com/silnrsi/sldrtools"

[project.scripts]
cldrimport = "sldr.tools.cldrimport:main"
fixsldr = "sldr.tools.fixsldr:main"
fontmatch = "sldr.tools.fontmatch:main"
fontrules = "sldr.tools.fontrules:main"
hackldmlattribs = "sldr.tools.hackldmlattribs:main"
icubreaktext = "sldr.tools.icubreaktext:main"
icupretty = "sldr.tools.icupretty:main"
kbdtest = "sldr.tools.kbdtest:main"
ldmlflatten = "sldr.tools.ldmlflatten:main"
ldmlmerge = "sldr.tools.ldmlmerge:main"
ldmlnormalize = "sldr.tools.ldmlnormalize:main"
proccldrcomments = "sldr.tools.proccldrcomments:main"
sheetldml = "sldr.tools.sheetldml:main"
sldraddfonts = "sldr.tools.sldraddfonts:main"
sldraddkeymans = "sldr.tools.sldraddkeymans:main"
sldrautonames = "sldr.tools.sldrautonames:main"
sldrcoverage = "sldr.tools.sldrcoverage:main"
zonetab = "sldr.tools.zonetab:main"

[tool.setuptools]
platforms = ["Linux", "Win32", "Mac OS X"]
zip-safe = false
packages.find = { where = ["lib"] }
script-files = [
    "scripts/sldr-flat-publish.sh",
    "scripts/cldrupdate",
]